DEEP-273. SonarLint sweep. - Rename logger member variable to adhere to naming conventions and avoid confusion with base class logger. - Use Stream.toList() for unmodifiable list.