@@ -18,7 +18,6 @@ import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExcep
 import uk.gov.companieshouse.logging.Logger;
 import uk.gov.companieshouse.logging.util.DataMap;
 
-import static java.util.stream.Collectors.toList;
 import static uk.gov.companieshouse.chs.gov.uk.notify.integration.api.ChsGovUkNotifyIntegrationService.APPLICATION_NAMESPACE;
 
 @ControllerAdvice
@@ -33,10 +32,11 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
             ERROR_MESSAGE_PARAMETER_NAME_SUBSTITUTIONS =
             Map.of("sendLetter.arg1", "context ID (X-Request-ID)");
 
-    private final Logger LOGGER;
+    /** Given this name to avoid any confusion with `ResponseEntityExceptionHandler.logger` **/
+    private final Logger myLogger;
 
     public GlobalExceptionHandler(Logger logger) {
-        this.LOGGER = logger;
+        this.myLogger = logger;
     }
 
     /**
@@ -51,7 +51,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
             ConstraintViolationException cve) {
         var message = "Error in " + APPLICATION_NAMESPACE + ": "
                 + buildMessage(cve.getMessage());
-        LOGGER.error("Will handle error `" + message + "` by responding with 400 Bad Request.",
+        myLogger.error("Will handle error `" + message + "` by responding with 400 Bad Request.",
                 getLogMap(message));
         return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                 .body(message);
@@ -67,9 +67,9 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
             var errors = manve.getFieldErrors().stream()
                     .map(this::buildMessage)
                     .sorted()
-                    .collect(toList());
+                    .toList();
             var message = "Error(s) in " + APPLICATION_NAMESPACE + ": " + errors;
-            LOGGER.error(message, getLogMap(errors));
+            myLogger.error(message, getLogMap(errors));
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(message);
         }
